Finished and added term-substitution.tex, removed htms.tex.

--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -8,10 +8,11 @@
 \input{inversion.tex}
 \input{uniqueness-of-types.tex}
 \input{canonical-forms.tex}
+\input{term-substitution.tex}
+\input{htes.tex}
 \input{hps.tex}
 \input{hecp.tex}
-\input{htms.tex}
-\input{htes.tex}
+
 \input{hpn.tex}
 %\section{ML}
 %\input{mps.tex}
