Changed the term subst label to tms.

--- a/proof/term-substitution.tex
+++ b/proof/term-substitution.tex
@@ -1,5 +1,5 @@
 \begin{lemma}
-\label{ts}
+\label{tms}
 If $\Gamma,x:T_{1}\vdash_{HM}e_{HM}:T_{2}$ and $\Gamma\vdash_{HM}y:T_{1}$ then $\Gamma\vdash_{HM}e_{HM}[y/x]:T_{2}$.  If $\Gamma,x:TST\vdash_{S}e_{S}:TST$ and $\Gamma\vdash_{S}y:TST$ then $\Gamma\vdash_{S}e_{S}[y/x]:TST$.
 \begin{proof}
 By structural induction.
