Finished and added type-substitution.tex.

--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -9,7 +9,7 @@
 \input{uniqueness-of-types.tex}
 \input{canonical-forms.tex}
 \input{term-substitution.tex}
-\input{htes.tex}
+\input{type-substitution.tex}
 \input{hps.tex}
 \input{hecp.tex}
 
