Renamed some files.

--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -4,18 +4,14 @@
 \newtheorem{lemma}{Lemma}
 \newtheorem{case}{Case}[theorem]
 \begin{document}
-\section{Haskell}
 \input{inversion.tex}
 \input{uniqueness-of-types.tex}
 \input{canonical-forms.tex}
 \input{term-substitution.tex}
 \input{type-substitution.tex}
-\input{hps.tex}
-\input{hecp.tex}
-
-\input{hpn.tex}
-%\section{ML}
-%\input{mps.tex}
-%\section{Scheme}
-%\input{sps.tex}
+\input{haskell-progress.tex}
+\input{evaluation-context-preservation.tex}
+\input{haskell-preservation.tex}
+%\input{ml-progress.tex}
+%\input{scheme-progress.tex}
 \end{document}
