Minor fixes everywhere.

--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -9,9 +9,10 @@
 \input{canonical-forms.tex}
 \input{term-substitution.tex}
 \input{type-substitution.tex}
-\input{haskell-progress.tex}
-\input{evaluation-context-preservation.tex}
-\input{haskell-preservation.tex}
+\input{progress.tex}
+%\input{haskell-progress.tex}
+%\input{evaluation-context-preservation.tex}
+%\input{haskell-preservation.tex}
 %\input{ml-progress.tex}
 %\input{scheme-progress.tex}
 \end{document}
