--- a/proof/type-substitution.tex
+++ b/proof/type-substitution.tex
@@ -1,5 +1,6 @@
 \begin{lemma}
 \label{tes}
+\onehalfspacing
 If $\Gamma,X\vdash_{HM}e_{HM}:T_{1}$ and $\vdash_{HM}T_{2}$ then $\Gamma\vdash_{HM}e_{HM}[T_{2}/X]:T_{1}[T_{2}/X]$.
 \begin{proof}
 By structural induction.
