--- a/model/hct.tex
+++ b/model/hct.tex
@@ -3,7 +3,7 @@
 \begin{center}
 \begin{tabular}{lcl}
 $e_{H}$ & $=$ & $x\;\vert\;v_{H}\;\vert\;e_{H}\;e_{H}\;\vert\;e_{H}\;\lbrace T\rbrace\;\vert\;\mathtt{if0}\;e_{H}\;e_{H}\;e_{H}\;\vert\;o\;e_{H}\;e_{H}\;\vert\;f\;e_{H}\;\vert\;\mathtt{fix}\;e_{H}$ \\
-$v_{H}$ & $=$ & $\lambda x:T.e_{H}\;\vert\;\Lambda X.e_{H}\;\vert\;\mathtt{cons}\;e_{H}\;e_{H}\;\vert\;\mathtt{nil}^{T}\;\vert\;\overline{n}$ \\
+$v_{H}$ & $=$ & $\overline{n}\;\vert\;\lambda x:T.e_{H}\;\vert\;\Lambda X.e_{H}\;\vert\;\mathtt{cons}\;e_{H}\;e_{H}\;\vert\;\mathtt{nil}^{T}$ \\
 $x$ & $=$ & Variables \\
 $o$ & $=$ & $\mathtt{+}\;\vert\;\mathtt{-}$ \\
 $f$ & $=$ & $\mathtt{hd}\;\vert\;\mathtt{tl}$ \\
