--- a/model/mct.tex
+++ b/model/mct.tex
@@ -4,7 +4,7 @@
 \begin{tabular}{lcl}
 $e_{M}$ & = & $x\;\vert\;v_{M}\;\vert\;e_{M}\;e_{M}\;\vert\;e_{M}\;\lbrace T\rbrace\;\vert\;\mathtt{if0}\;e_{M}\;e_{M}\;e_{M}\;\vert\;\mathtt{cons}\;e_{M}\;e_{M}\;\vert\;o\;e_{M}\;e_{M}\;\vert\;f\;e_{M}$ \\
 && $\vert\;\mathtt{fix}\;e_{M}$ \\
-$v_{M}$ & = & $\lambda x:T.e_{M}\;\vert\;\Lambda X.e_{M}\;\vert\;\mathtt{cons}\;v_{M}\;v_{M}\;\vert\;\mathtt{nil}^{T}\;\vert\;\overline{n}$ \\
+$v_{M}$ & = & $\overline{n}\;\vert\;\lambda x:T.e_{M}\;\vert\;\Lambda X.e_{M}\;\vert\;\mathtt{cons}\;v_{M}\;v_{M}\;\vert\;\mathtt{nil}^{T}$ \\
 $x$ & = & Variables \\
 $o$ & = & $\mathtt{+}\;\vert\;\mathtt{-}$ \\
 $f$ & = & $\mathtt{hd}\;\vert\;\mathtt{tl}$ \\
