--- a/proof/evaluation-context-preservation.tex
+++ b/proof/evaluation-context-preservation.tex
@@ -1,5 +1,6 @@
 \begin{lemma}
-\label{hecp}
+\label{ecp}
+\onehalfspacing
 If $\Gamma\vdash_{H}e_{H}^{1}:T_{1}$, $\Gamma\vdash_{H}e_{H}^{2}:T_{2}$, and $\mathscr{E}[e_{H}^{1}]:T_{1}$ then $\mathscr{E}[e_{H}^{2}]:T_{2}$.
 \begin{proof}
 By structural induction because typing rules use types and not forms of sub-terms.
