--- a/model/scos.tex
+++ b/model/scos.tex
@@ -2,7 +2,7 @@
 \onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
-$\mathscr{E}[(\lambda x.e_{S})\;v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}[x/v_{S}]]$ \\
+$\mathscr{E}[(\lambda x.e_{S})\;v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}[v_{S}/s]]$ \\
 $\mathscr{E}[v_{S}^{1}\;v_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"}]$ \\
 && ($v_{S}^{1}\neq\lambda x.e_{S}$) \\
 $\mathscr{E}[\mathtt{if0}\;\overline{0}\;e_{S}^{1}\;e_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}^{1}]$ \\
