--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -10,9 +10,6 @@
 \input{term-substitution.tex}
 \input{type-substitution.tex}
 \input{progress.tex}
-%\input{haskell-progress.tex}
 %\input{evaluation-context-preservation.tex}
-%\input{haskell-preservation.tex}
-%\input{ml-progress.tex}
-%\input{scheme-progress.tex}
+%\input{preservation.tex}
 \end{document}
