--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -3,6 +3,7 @@
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}{Lemma}
 \newtheorem{case}{Case}[theorem]
+\newtheorem{subcase}{Case}[case]
 \begin{document}
 \input{inversion.tex}
 \input{uniqueness-of-types.tex}
