--- a/model/hctr.tex
+++ b/model/hctr.tex
@@ -14,7 +14,7 @@
 \[
 \frac{}{\Gamma\vdash_{H}\overline{n}:N}
 \quad
-\frac{}{\Gamma\vdash_{H}\mathtt{nil}^{T}:[T]}
+\frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}\mathtt{nil}^{T}:[T]}
 \quad
 \frac{x:T\in\Gamma}{\Gamma\vdash_{H}x:T}
 \quad
