--- a/proof/progress.tex
+++ b/proof/progress.tex
@@ -67,7 +67,7 @@ $e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{3}$ or $e_{S}^{1}\rightar
 \begin{case}
 $e_{H}=e_{H}^{1}\;\lbrace T_{1}\rbrace$
 
-$e_{H}^{1}$ is a value or $e_{H}^{1}\rightarrow e_{H}^{2}$ or $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{H}^{1}$ is a value then $e_{H}^{1}:\forall X.T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{H}^{1}=\Lambda X.e_{H}^{3}$ or $e_{H}^{1}=\,^{(\forall X.T_{2})[T_{i}/T_{i}^{a}]}HS\;v_{S}$ by canonical forms (Lemma \ref{cf}).  If $e_{H}^{1}\rightarrow e_{H}^{2}$ then $e_{H}^{1}\;\lbrace T_{1}\rbrace\rightarrow e_{H}^{2}\;\lbrace T_{1}\rbrace$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $e_{H}^{1}\;\lbrace T_{1}\rbrace\rightarrow$ \emph{\textbf{Error}:\;string}.
+$e_{H}^{1}$ is a value or $e_{H}^{1}\rightarrow e_{H}^{2}$ or $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{H}^{1}$ is a value then $e_{H}^{1}:\forall X.T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{H}^{1}=\Lambda X.e_{H}^{3}$ or $e_{H}^{1}=\,^{\forall X.T_{2}}HS\;v_{S}$ by canonical forms (Lemma \ref{cf}).  If $e_{H}^{1}\rightarrow e_{H}^{2}$ then $e_{H}^{1}\;\lbrace T_{1}\rbrace\rightarrow e_{H}^{2}\;\lbrace T_{1}\rbrace$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $e_{H}^{1}\;\lbrace T_{1}\rbrace\rightarrow$ \emph{\textbf{Error}:\;string}.
 \end{case}
 \begin{subcase}
 $e_{H}^{1}=\Lambda X.e_{H}^{3}$
@@ -75,9 +75,9 @@ $e_{H}^{1}=\Lambda X.e_{H}^{3}$
 $(\Lambda X.e_{H}^{3})\;\lbrace T_{1}\rbrace\rightarrow e_{H}^{3}[T_{1}/X]$.
 \end{subcase}
 \begin{subcase}
-$e_{H}^{1}=\,^{(\forall X.T_{2})[T_{i}/T_{i}^{a}]}HS\;v_{S}$
+$e_{H}^{1}=\,^{\forall X.T_{2}}HS\;v_{S}$
 
-$(^{(\forall X.T_{2})[T_{i}/T_{i}^{a}]}HS\;v_{S})\;\lbrace T_{1}\rbrace\rightarrow\,^{T_{2}[T_{1}^{a}/X]}HS\;v_{S}$.
+$(^{\forall X.T_{2}}HS\;v_{S})\;\lbrace T_{1}\rbrace\rightarrow\,^{T_{2}[T_{1}^{a}/X]}HS\;v_{S}$.
 \end{subcase}
 \begin{case}
 $e_{H}=\mathtt{if0}\;e_{H}^{1}\;e_{H}^{2}\;e_{H}^{3}$
