--- a/proof/progress.tex
+++ b/proof/progress.tex
@@ -80,9 +80,14 @@ $e_{H}^{1}=\,^{\forall X.T_{2}}HS\;v_{S}$
 $(^{\forall X.T_{2}}HS\;v_{S})\;\lbrace T_{1}\rbrace\rightarrow\,^{T_{2}[T_{1}^{a}/X]}HS\;v_{S}$.
 \end{subcase}
 \begin{case}
-$e_{H}=\mathtt{if0}\;e_{H}^{1}\;e_{H}^{2}\;e_{H}^{3}$
+$e_{HM}=\mathtt{if0}\;e_{HM}^{1}\;e_{HM}^{2}\;e_{HM}^{3}$
 
-By the induction hypothesis, either $e_{H}^{1}$ is a value, $e_{H}^{1}\rightarrow e_{H}^{4}$ for some $e_{H}^{4}$, or $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} for some \emph{string}.  If $e_{H}^{1}$ is a value then $e_{H}^{1}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{H}^{1}=\overline{n}$ for some $\overline{n}$ by canonical forms (Lemma \ref{cf}).  Therefore $\mathtt{if0}\;e_{H}^{1}\;e_{H}^{2}\;e_{H}^{3}\rightarrow e_{H}^{2}$ if $e_{H}^{1}=\overline{0}$ or $\mathtt{if0}\;e_{H}^{1}\;e_{H}^{2}\;e_{H}^{3}\rightarrow e_{H}^{3}$ if $e_{H}^{1}\neq\overline{0}$.  If $e_{H}^{1}\rightarrow e_{H}^{4}$ for some $e_{H}^{4}$ then $\mathtt{if0}\;e_{H}^{1}\;e_{H}^{2}\;e_{H}^{3}\rightarrow \mathtt{if0}\;e_{H}^{4}\;e_{H}^{2}\;e_{H}^{3}$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} for some \emph{string} then $\mathtt{if0}\;e_{H}^{1}\;e_{H}^{2}\;e_{H}^{3}\rightarrow$ \emph{\textbf{Error}:\;string}.
+$e_{HM}^{1}$ is a value or $e_{HM}^{1}\rightarrow e_{HM}^{4}$ or $e_{HM}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{HM}^{1}$ is a value then $e_{HM}^{1}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{HM}^{1}=\overline{n}$ by canonical forms (Lemma \ref{cf}).  $\mathtt{if0}\;e_{HM}^{1}\;e_{HM}^{2}\;e_{HM}^{3}\rightarrow e_{HM}^{2}$ if $e_{HM}^{1}=\overline{0}$ or $\mathtt{if0}\;e_{HM}^{1}\;e_{HM}^{2}\;e_{HM}^{3}\rightarrow e_{HM}^{3}$ otherwise.  If $e_{HM}^{1}\rightarrow e_{HM}^{4}$ then $\mathtt{if0}\;e_{HM}^{1}\;e_{HM}^{2}\;e_{HM}^{3}\rightarrow \mathtt{if0}\;e_{HM}^{4}\;e_{HM}^{2}\;e_{HM}^{3}$.  If $e_{HM}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $\mathtt{if0}\;e_{HM}^{1}\;e_{HM}^{2}\;e_{HM}^{3}\rightarrow$ \emph{\textbf{Error}:\;string}.
+\end{case}
+\begin{case}
+$e_{S}=\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}$
+
+$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{4}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}$ is a value then $\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}\rightarrow e_{S}^{2}$ if $e_{S}^{1}=\overline{0}$ or $\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}\rightarrow e_{S}^{3}$ otherwise.  If $e_{S}^{1}\rightarrow e_{S}^{4}$ then $\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}\rightarrow \mathtt{if0}\;e_{S}^{4}\;e_{S}^{2}\;e_{S}^{3}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}\rightarrow$ \emph{\textbf{Error}:\;string}.
 \end{case}
 \begin{case}
 $e_{H}=o\;e_{H}^{1}\;e_{H}^{2}$
