--- a/proof/progress.tex
+++ b/proof/progress.tex
@@ -57,12 +57,12 @@ $e_{H}^{1}$ is a value or $e_{H}^{1}\rightarrow e_{H}^{3}$ or $e_{H}^{1}\rightar
 \begin{case}
 $e_{M}=e_{M}^{1}\;e_{M}^{2}$
 
-$e_{M}^{1}$ is a value or $e_{M}^{1}\rightarrow e_{M}^{3}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{M}^{1}$ is a value then $e_{M}^{1}:T_{1}\rightarrow T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{M}^{1}=\lambda x:T_{1}.e_{M}^{4}$ by canonical forms (Lemma \ref{cf}).  If $e_{M}^{1}\rightarrow e_{M}^{3}$ then $e_{M}^{1}\;e_{M}^{2}\rightarrow e_{M}^{3}\;e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $e_{M}^{1}\;e_{M}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  $e_{M}^{2}$ is a value or $e_{M}^{2}\rightarrow e_{M}^{5}$ or $e_{M}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{M}^{1}$ is a value and $e_{M}^{2}\rightarrow e_{M}^{5}$ then $e_{M}^{1}\;e_{M}^{2}\rightarrow e_{M}^{1}\;e_{M}^{5}$.  If $e_{M}^{1}$ is a value and $e_{M}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} then $e_{M}^{1}\;e_{M}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  If $e_{M}^{1}$ and $e_{M}^{2}$ are values then $(\lambda x:T_{1}.e_{M}^{4})\;e_{M}^{2}\rightarrow e_{M}^{4}[e_{M}^{2}/x]$.
+$e_{M}^{1}$ is a value or $e_{M}^{1}\rightarrow e_{M}^{3}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{M}^{1}$ is a value then $e_{M}^{1}:T_{1}\rightarrow T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{M}^{1}=\lambda x:T_{1}.e_{M}^{4}$ by canonical forms (Lemma \ref{cf}).  If $e_{M}^{1}\rightarrow e_{M}^{3}$ then $e_{M}^{1}\;e_{M}^{2}\rightarrow e_{M}^{3}\;e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $e_{M}^{1}\;e_{M}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  $e_{M}^{2}$ is a value or $e_{M}^{2}\rightarrow e_{M}^{5}$ or $e_{M}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{M}^{2}\rightarrow e_{M}^{5}$ and $e_{M}^{1}$ is a value then $e_{M}^{1}\;e_{M}^{2}\rightarrow e_{M}^{1}\;e_{M}^{5}$.  If $e_{M}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} and $e_{M}^{1}$ is a value then $e_{M}^{1}\;e_{M}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  If $e_{M}^{1}$ and $e_{M}^{2}$ are values then $(\lambda x:T_{1}.e_{M}^{4})\;e_{M}^{2}\rightarrow e_{M}^{4}[e_{M}^{2}/x]$.
 \end{case}
 \begin{case}
 $e_{S}=e_{S}^{1}\;e_{S}^{2}$
 
-$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{3}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{3}$ then $e_{S}^{1}\;e_{S}^{2}\rightarrow e_{S}^{3}\;e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $e_{S}^{1}\;e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  $e_{S}^{2}$ is a value or $e_{S}^{2}\rightarrow e_{S}^{4}$ or $e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}$ is a value and $e_{S}^{2}\rightarrow e_{S}^{4}$ then $e_{S}^{1}\;e_{S}^{2}\rightarrow e_{S}^{1}\;e_{S}^{4}$.  If $e_{S}^{1}$ is a value and $e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} then $e_{S}^{1}\;e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  If $e_{S}^{1}$ and $e_{S}^{2}$ are values then $(\lambda x.e_{S}^{5})\;e_{S}^{2}\rightarrow e_{S}^{5}[e_{S}^{2}/x]$ if $e_{S}^{1}=\lambda x.e_{S}^{5}$ or $e_{S}^{1}\;e_{S}^{2}\rightarrow\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"}$ otherwise.
+$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{3}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{3}$ then $e_{S}^{1}\;e_{S}^{2}\rightarrow e_{S}^{3}\;e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $e_{S}^{1}\;e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  $e_{S}^{2}$ is a value or $e_{S}^{2}\rightarrow e_{S}^{4}$ or $e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{2}\rightarrow e_{S}^{4}$ and $e_{S}^{1}$ is a value then $e_{S}^{1}\;e_{S}^{2}\rightarrow e_{S}^{1}\;e_{S}^{4}$.  If $e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} and $e_{S}^{1}$ is a value then $e_{S}^{1}\;e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  If $e_{S}^{1}$ and $e_{S}^{2}$ are values then $(\lambda x.e_{S}^{5})\;e_{S}^{2}\rightarrow e_{S}^{5}[e_{S}^{2}/x]$ if $e_{S}^{1}=\lambda x.e_{S}^{5}$ or $e_{S}^{1}\;e_{S}^{2}\rightarrow\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"}$ otherwise.
 \end{case}
 \begin{case}
 $e_{H}=e_{H}^{1}\;\lbrace T_{1}\rbrace$
@@ -90,13 +90,14 @@ $e_{S}=\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}$
 $e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{4}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}$ is a value then $\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}\rightarrow e_{S}^{2}$ if $e_{S}^{1}=\overline{0}$ or $\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}\rightarrow e_{S}^{3}$ otherwise.  If $e_{S}^{1}\rightarrow e_{S}^{4}$ then $\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}\rightarrow \mathtt{if0}\;e_{S}^{4}\;e_{S}^{2}\;e_{S}^{3}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}\rightarrow$ \emph{\textbf{Error}:\;string}.
 \end{case}
 \begin{case}
-$e_{H}=o\;e_{H}^{1}\;e_{H}^{2}$
+$e_{HM}=o\;e_{HM}^{1}\;e_{HM}^{2}$
 
-By the induction hypothesis, either $e_{H}^{1}$ is a value, $e_{H}^{1}\rightarrow e_{H}^{3}$ for some $e_{H}^{3}$, or $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} for some \emph{string}.  If $e_{H}^{1}$ is a value then $e_{H}^{1}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{H}^{1}=\overline{n_{1}}$ for some $\overline{n_{1}}$ by canonical forms (Lemma \ref{cf}).  If $e_{H}^{1}\rightarrow e_{H}^{3}$ for some $e_{H}^{3}$ then $o\;e_{H}^{1}\;e_{H}^{2}\rightarrow o\;e_{H}^{3}\;e_{H}^{2}$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} for some \emph{string} then $o\;e_{H}^{1}\;e_{H}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.
+$e_{HM}^{1}$ is a value or $e_{HM}^{1}\rightarrow e_{HM}^{3}$ or $e_{HM}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{HM}^{1}$ is a value then $e_{HM}^{1}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{HM}^{1}=\overline{n_{1}}$ by canonical forms (Lemma \ref{cf}).  If $e_{HM}^{1}\rightarrow e_{HM}^{3}$ then $o\;e_{HM}^{1}\;e_{HM}^{2}\rightarrow o\;e_{HM}^{3}\;e_{HM}^{2}$.  If $e_{HM}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $o\;e_{HM}^{1}\;e_{HM}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  $e_{HM}^{2}$ is a value or $e_{HM}^{2}\rightarrow e_{HM}^{4}$ or $e_{HM}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{HM}^{2}$ is a value then $e_{HM}^{2}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{HM}^{2}=\overline{n_{2}}$ by canonical forms (Lemma \ref{cf}).  If $e_{HM}^{2}\rightarrow e_{HM}^{4}$ and $e_{HM}^{1}$ is a value then $o\;e_{HM}^{1}\;e_{HM}^{2}\rightarrow o\;e_{HM}^{1}\;e_{HM}^{4}$.  If $e_{HM}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} and $e_{HM}^{1}$ is a value then $o\;e_{HM}^{1}\;e_{HM}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  If $e_{HM}^{1}=\overline{n_{1}}$ and $e_{HM}^{2}=\overline{n_{2}}$ then $o\;e_{HM}^{1}\;e_{HM}^{2}\rightarrow\overline{n_{1}+n_{2}}$ if $o=+$ or $o\;e_{HM}^{1}\;e_{HM}^{2}\rightarrow\overline{max(n_{1}-n_{2},0)}$ if $o=-$.
+\end{case}
+\begin{case}
+$e_{S}=o\;e_{S}^{1}\;e_{S}^{2}$
 
-By the induction hypothesis, either $e_{H}^{2}$ is a value, $e_{H}^{2}\rightarrow e_{H}^{3}$ for some $e_{H}^{3}$, or $e_{H}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} for some \emph{string}.  If $e_{H}^{2}$ is a value then $e_{H}^{2}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{H}^{2}=\overline{n_{2}}$ for some $\overline{n_{2}}$ by canonical forms (Lemma \ref{cf}).  If $e_{H}^{2}\rightarrow e_{H}^{3}$ for some $e_{H}^{3}$ then $o\;e_{H}^{1}\;e_{H}^{2}\rightarrow o\;e_{H}^{1}\;e_{H}^{3}$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} for some \emph{string} then $o\;e_{H}^{1}\;e_{H}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.
-
-If $e_{H}^{1}=\overline{n_{1}}$ and $e_{H}^{2}=\overline{n_{2}}$ then $o\;e_{H}^{1}\;e_{H}^{2}\rightarrow \overline{n_{1}+n_{2}}$ if $o=+$ or $o\;e_{H}^{1}\;e_{H}^{2}\rightarrow \overline{max(n_{1}-n_{2},0)}$ if $o=-$.
+$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{3}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{3}$ then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow o\;e_{S}^{3}\;e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  $e_{S}^{2}$ is a value or $e_{S}^{2}\rightarrow e_{S}^{4}$ or $e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{2}\rightarrow e_{S}^{4}$ and $e_{S}^{1}$ is a value then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow o\;e_{S}^{1}\;e_{S}^{4}$.  If $e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} and $e_{S}^{1}$ is a value then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  If $e_{S}^{1}$ and $e_{S}^{2}$ are values then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow\overline{n_{1}+n_{2}}$ if $o=+$, $e_{S}^{1}=\overline{n_{1}}$, and $e_{S}^{2}=\overline{n_{2}}$ and $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow\overline{max(n_{1}-n_{2},0)}$ if $o=-$, $e_{S}^{1}=\overline{n_{1}}$, and $e_{S}^{2}=\overline{n_{2}}$ and $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow\mathtt{wrong}\;\mathrm{``Not\;a\;number"}$ otherwise.
 \end{case}
 \begin{case}
 $e_{H}=f\;e_{H}^{1}$
