Finished ML progress field.

--- a/proof/canonical-forms.tex
+++ b/proof/canonical-forms.tex
@@ -8,7 +8,7 @@ The possible syntactic forms of values of various types.
 \item If $v_{H}:\forall X.T$ then $v_{H}=\Lambda X.e_{H}$ or $v_{H}=\,^{\forall X.T}HS\;v_{S}$.
 \item If $v_{M}:\forall X.T$ then $v_{M}=\Lambda X.e_{M}$ or $v_{M}=\,^{\forall X.T}MS\;v_{S}$.
 \item If $v_{H}:[T]$ then $v_{H}=\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$ or $v_{H}=\mathtt{nil}^{T}$.
-\item If $v_{M}:[T]$ then $v_{M}=\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2}$ or $v_{M}=\mathtt{nil}^{T}$.
+\item If $v_{M}:[T]$ then $v_{M}=\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2}$ or $v_{M}=\mathtt{nil}^{T}$ or $v_{M}=\,^{[T]}MH^{[T]}\;v_{H}$.
 \item If $v_{H}:L$ then $v_{H}=\,^{L}HS\;v_{S}$.
 \item If $v_{M}:L$ then $v_{M}=\,^{L}MS\;v_{S}$.
 \end{enumerate}
