--- a/model/hios.tex
+++ b/model/hios.tex
@@ -6,6 +6,7 @@ $\mathscr{E}[^{N}HM^{N}\;\overline{n}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\over
 $\mathscr{E}[^{\forall X_{1}.T}HM^{\forall X_{1}.T}\;(\Lambda X_{1}.e_{M})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\Lambda X_{2}.(^{T[X_{2}/X_{1}]}HM^{T[X_{2}/X_{1}]}\;((\Lambda X_{1}.e_{M})\;\lbrace X_{2}\rbrace))]$ \\
 $\mathscr{E}[^{T_{1}\rightarrow T_{2}}HM^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{M})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\lambda x_{2}:T_{1}.(^{T_{2}}HM^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{M})\;(^{T_{1}}MH^{T_{1}}\;x_{2})))]$ \\
 $\mathscr{E}[^{[T]}HM^{[T]}\;(\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{cons}\;(^{T}HM^{T}\;v_{M}^{1})\;(^{[T]}HM^{[T]}\;v_{M}^{2})]$ \\
+$\mathscr{E}[^{[T]}HM^{[T]}\;\mathtt{nil}^{T}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{nil}^{T}]$ \\
 $\mathscr{E}[^{N}HS\;\overline{n}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\overline{n}]$ \\
 $\mathscr{E}[^{N}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{N}HS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;number"})]$ \\
 && ($v_{S}\neq\overline{n}$) \\
@@ -17,8 +18,9 @@ $\mathscr{E}[^{T^{a}}HS\;(SH^{T^{a}}\;e_{H})]_{H}$ & $\rightarrow$ & $\mathscr{E
 $\mathscr{E}[^{T^{a}}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T^{a}}HS\;(\mathtt{wrong}\;\mathrm{``Parametricity\;violated"})]$ \\
 && ($v_{S}\neq SH^{T^{a}}\;e_{H}$) \\
 $\mathscr{E}[^{[T]}HS\;(\mathtt{cons}\;v_{S}^{1}\;v_{S}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{cons}\;(^{T}HS\;v_{S}^{1})\;(^{[T]}HS\;v_{S}^{2})]$ \\
+$\mathscr{E}[^{[T]}HS\;\mathtt{nil}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{nil}^{T}]$ \\
 $\mathscr{E}[^{[T]}HS\;v_{S}^{1}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{[T]}HS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;list"})]$ \\
-&& ($v_{S}^{1}\neq\mathtt{cons}\;v_{S}^{2}\;v_{S}^{3}$)
+&& ($v_{S}^{1}\neq\mathtt{cons}\;v_{S}^{2}\;v_{S}^{3}$ and $v_{S}^{1}\neq\mathtt{nil}$)
 \end{tabular}
 \end{center}
 \caption{Haskell interoperation operational semantics}
