--- a/model/mcos.tex
+++ b/model/mcos.tex
@@ -10,6 +10,8 @@ $\mathscr{E}[+\;\overline{n_{1}}\;\overline{n_{2}}]_{M}$ & $\rightarrow$ & $\mat
 $\mathscr{E}[-\;\overline{n_{1}}\;\overline{n_{2}}]_{M}$ & $\rightarrow$ & $\mathscr{E}[\overline{(max(n_{1}-n_{2},0)}]$ \\
 $\mathscr{E}[\mathtt{hd}\;(\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2})]_{M}$ & $\rightarrow$ & $\mathscr{E}[v_{M}^{1}]$ \\
 $\mathscr{E}[\mathtt{tl}\;(\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2})]_{M}$ & $\rightarrow$ & $\mathscr{E}[v_{M}^{2}]$ \\
+$\mathscr{E}[\mathtt{hd}\;\mathtt{nil}^{T}]_{M}$ & $\rightarrow$ & $\mathscr{E}[^{T}MS\;(\mathtt{wrong}\;\mathrm{``Empty\;list"})]$ \\
+$\mathscr{E}[\mathtt{tl}\;\mathtt{nil}^{T}]_{M}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{nil}^{T}]$ \\
 $\mathscr{E}[\mathtt{fix}\;(\lambda x:T.e_{M})]_{M}$ & $\rightarrow$ & $\mathscr{E}[e_{M}[(\mathtt{fix}\;(\lambda x:T.e_{M}))/x]]$
 \end{tabular}
 \end{center}
