--- a/model/scos.tex
+++ b/model/scos.tex
@@ -13,6 +13,8 @@ $\mathscr{E}[o\;v_{S}^{1}\;v_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\matht
 && ($v_{S}^{1}\neq\overline{n}$ or $v_{S}^{2}\neq\overline{n}$) \\
 $\mathscr{E}[\mathtt{hd}\;(\mathtt{cons}\;v_{S}^{1}\;v_{S}^{2})]_{S}$ & $\rightarrow$ & $\mathscr{E}[v_{S}^{1}]$ \\
 $\mathscr{E}[\mathtt{tl}\;(\mathtt{cons}\;v_{S}^{1}\;v_{S}^{2})]_{S}$ & $\rightarrow$ & $\mathscr{E}[v_{S}^{2}]$ \\
+$\mathscr{E}[\mathtt{hd}\;\mathtt{nil}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}\;\mathrm{``Empty\;list"}]$ \\
+$\mathscr{E}[\mathtt{tl}\;\mathtt{nil}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{nil}]$ \\
 $\mathscr{E}[f\;v_{S}^{1}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}\;\mathrm{``Not\;a\;list"}]$ \\
 && ($v_{S}^{1}\neq\mathtt{cons}\;v_{S}^{2}\;v_{S}^{3}$) \\
 $\mathscr{E}[\mathtt{nat?}\;\overline{n}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{0}]$ \\
