--- a/proof/progress.tex
+++ b/proof/progress.tex
@@ -110,6 +110,11 @@ $e_{M}=f\;e_{M}^{1}$
 $e_{M}^{1}$ is a value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{M}^{1}$ is a value then $e_{M}^{1}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{M}^{1}=\mathtt{cons}\;e_{M}^{2}\;e_{M}^{3}$ or $e_{M}^{1}=\mathtt{nil}^{T}$ or $e_{M}^{1}=\,^{[T]}MH^{[T]}\;v_{H}$ by canonical forms (Lemma \ref{cf}).  If $e_{M}^{1}=\mathtt{cons}\;e_{M}^{2}\;e_{M}^{3}$ then $f\;e_{M}^{1}\rightarrow e_{M}^{2}$ if $f=\mathtt{hd}$ or $f\;e_{M}^{1}\rightarrow e_{M}^{3}$ if $f=\mathtt{tl}$.  If $e_{M}^{1}=\mathtt{nil}^{T}$ then $f\;e_{M}^{1}\rightarrow\,^{T}MS\;(\mathtt{wrong}\;\mathrm{``Empty\;list"})$ if $f=\mathtt{hd}$ or $f\;e_{M}^{1}\rightarrow\mathtt{nil}^{T}$ if $f=\mathtt{tl}$.  If $e_{M}^{1}=\,^{[T]}MH^{[T]}\;v_{H}$ then $v_{H}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $v_{H}=\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$ or $v_{H}=\mathtt{nil}^{T}$ by canonical forms (Lemma \ref{cf}).  If $v_{H}=\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$ then $f\;e_{M}^{1}\rightarrow\,^{T}MH^{T}\;e_{H}^{1}$ if $f=\mathtt{hd}$ and $f\;e_{M}^{1}\rightarrow\,^{[T]}MH^{[T]}\;e_{H}^{2}$ if $f=\mathtt{tl}$.  If $v_{H}=\mathtt{nil}^{T}$ then $f\;e_{M}^{1}\rightarrow\,^{T}MS\;(\mathtt{wrong}\;\mathrm{``Empty\;list"})$ if $f=\mathtt{hd}$ and $f\;e_{M}^{1}\rightarrow\mathtt{nil}^{T}$ if $f=\mathtt{tl}$.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $f\;e_{M}^{1}\rightarrow f\;e_{M}^{2}$.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $f\;e_{M}^{1}\rightarrow f\;e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $f\;e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.
 \end{case}
 \begin{case}
+$e_{S}=f\;e_{S}^{1}$
+
+$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{2}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}=\mathtt{cons}\;e_{S}^{2}\;e_{S}^{3}$ then $f\;e_{S}^{1}\rightarrow e_{S}^{2}$ if $f=\mathtt{hd}$ or $f\;e_{S}^{1}\rightarrow e_{S}^{3}$ if $f=\mathtt{tl}$.  If $e_{S}^{1}=\mathtt{nil}$ then $f\;e_{S}^{1}\rightarrow\mathtt{wrong}\;\mathrm{``Empty\;list"}$ if $f=\mathtt{hd}$ or $f\;e_{S}^{1}\rightarrow\mathtt{nil}$ if $f=\mathtt{tl}$.  If $e_{S}^{1}=SH^{[T]}\;v_{H}$ then $v_{H}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $v_{H}=\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$ or $v_{H}=\mathtt{nil}^{T}$ by canonical forms (Lemma \ref{cf}).  If $v_{H}=\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$ then $f\;e_{S}^{1}\rightarrow SH^{T}\;e_{H}^{1}$ if $f=\mathtt{hd}$ and $f\;e_{S}^{1}\rightarrow SH^{[T]}\;e_{H}^{2}$ if $f=\mathtt{tl}$.  If $v_{H}=\mathtt{nil}^{T}$ then $f\;e_{S}^{1}\rightarrow\mathtt{wrong}\;\mathrm{``Empty\;list"}$ if $f=\mathtt{hd}$ and $f\;e_{S}^{1}\rightarrow\mathtt{nil}$ if $f=\mathtt{tl}$.  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $f\;e_{S}^{1}\rightarrow f\;e_{S}^{2}$.  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $f\;e_{S}^{1}\rightarrow f\;e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $f\;e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.
+\end{case}
+\begin{case}
 $e_{H}=\mathtt{fix}\;e_{H}^{1}$
 
 By the induction hypothesis, either $e_{H}^{1}$ is a value, $e_{H}^{1}\rightarrow e_{H}^{2}$ for some $e_{H}^{2}$, or $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} for some \emph{string}.  If $e_{H}^{1}$ is a value then $e_{H}^{1}:T_{1}\rightarrow T_{2}$ for some $T_{1}$ and $T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{H}^{1}=\lambda x:T_{1}.e_{H}^{2}$ for some $x$ and $e_{H}^{2}$ by canonical forms (Lemma \ref{cf}).  Therefore $\mathtt{fix}\;(\lambda x:T_{1}.e_{H}^{2})\rightarrow e_{H}^{2}[\mathtt{fix}\;(\lambda x:T_{1}.e_{H}^{2})/x]$.  If $e_{H}^{1}\rightarrow e_{H}^{2}$ for some $e_{H}^{2}$ then $\mathtt{fix}\;e_{H}^{1}\rightarrow\mathtt{fix}\;e_{H}^{2}$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} for some \emph{string} then $\mathtt{fix}\;e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.
