--- a/proof/progress.tex
+++ b/proof/progress.tex
@@ -122,37 +122,7 @@ $e_{HM}^{1}$ is a value or $e_{HM}^{1}\rightarrow e_{HM}^{2}$ or $e_{HM}^{1}\rig
 \begin{case}
 $e_{H}=\,^{T}HM^{T}\;e_{M}^{1}$
 
-By the ML progress theorem (Theorem \ref{mps}), either $e_{M}^{1}\rightarrow e_{M}^{2}$ for some $e_{M}^{2}$, $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} for some \emph{string}, or $e_{M}^{1}$ is a value.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ for some $e_{M}^{2}$ then $^{T}HS\;e_{M}^{1}\rightarrow\,^{T}HS\;e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} for some \emph{string} then $^{T}HS\;e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.  If $e_{M}^{1}$ is a value then $T$ determines its reduction:
-\begin{case}
-$T=N$
-
-$e_{M}^{1}=\overline{n}$ for some $\overline{n}$ by canonical forms (Lemma \ref{mcf}).  $^{N}HM^{N}\;\overline{n}\rightarrow\overline{n}$.
-\end{case}
-\begin{case}
-$T=T_{1}\rightarrow T_{2}$
-
-$e_{M}^{1}=\lambda x_{1}:T_{1}.e_{M}^{2}$ for some $x_{1}$ and $e_{M}^{2}$ by canonical forms (Lemma \ref{mcf}).  $^{T_{1}\rightarrow T_{2}}HM^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{M}^{2})\rightarrow\lambda x_{2}:T_{1}[T_{i}/T^{a}_{i}].(^{T_{2}}HM^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{M}^{2})\;(^{T_{1}}MH^{T_{1}}\;x_{2})))$.
-\end{case}
-\begin{case}
-$T=\forall X_{1}.T_{1}$
-
-$e_{M}^{1}=\Lambda X_{1}.e_{M}^{2}$ for some $e_{M}^{2}$ by canonical forms (Lemma \ref{mcf}).  $^{\forall X_{1}.T_{1}}HM^{\forall X_{1}.T_{1}}\;(\Lambda X_{1}.e_{M}^{2})\rightarrow\Lambda X_{2}.(^{T_{1}[X_{2}/X_{1}]}HM^{T_{1}[X_{2}/X_{1}]}\;((\Lambda X_{1}.e_{M}^{2})\;\lbrace X_{2}\rbrace))$.
-\end{case}
-\begin{case}
-$T=[T_{1}]$
-
-$e_{M}^{1}=\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2}$ for some $v_{M}^{1}$ and $v_{M}^{1}$ by canonical forms (Lemma \ref{mcf}).  $^{[T_{1}]}HM^{[T_{1}]}\;(\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2})\rightarrow\mathtt{cons}\;(^{T_{1}}HM^{T_{1}}\;v_{M}^{1})\;(^{[T_{1}]}HM^{[T_{1}]}\;v_{M}^{2})$.
-\end{case}
-\begin{case}
-$T=L$
-
-Cannot occur because $L$ occurs only in $^{L}HS\;e_{S}$.
-\end{case}
-\begin{case}
-$T=T_{1}^{a}$
-
-Cannot occur because $T_{1}^{a}$ occurs only in $^{T_{1}^{a}}HS\;e_{S}$.
-\end{case}
+$e_{M}^{1}$ is a value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{M}^{1}$ is a value then $T$ determines its reduction.  If $T=N$ then $e_{M}^{1}=\overline{n}$ by canonical forms (Lemma \ref{cf}) and $^{N}HM^{N}\;\overline{n}\rightarrow\overline{n}$.  If $T=T_{1}\rightarrow T_{2}$ then $e_{M}^{1}=\lambda x_{1}:T_{1}.e_{M}^{2}$ by canonical forms (Lemma \ref{cf}) and $^{T_{1}\rightarrow T_{2}}HM^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{M}^{2})\rightarrow\lambda x_{2}:T_{1}[T_{i}/T^{a}_{i}].(^{T_{2}}HM^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{M}^{2})\;(^{T_{1}}MH^{T_{1}}\;x_{2})))$.  If $T=\forall X_{1}.T_{1}$ then $e_{M}^{1}=\Lambda X_{1}.e_{M}^{2}$ by canonical forms (Lemma \ref{cf}) and $^{\forall X_{1}.T_{1}}HM^{\forall X_{1}.T_{1}}\;(\Lambda X_{1}.e_{M}^{2})\rightarrow\Lambda X_{2}.(^{T_{1}[X_{2}/X_{1}]}HM^{T_{1}[X_{2}/X_{1}]}\;((\Lambda X_{1}.e_{M}^{2})\;\lbrace X_{2}\rbrace))$.  If $T=[T_{1}]$ then $e_{M}^{1}=\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2}$ by canonical forms (Lemma \ref{cf}) and $^{[T_{1}]}HM^{[T_{1}]}\;(\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2})\rightarrow\mathtt{cons}\;(^{T_{1}}HM^{T_{1}}\;v_{M}^{1})\;(^{[T_{1}]}HM^{[T_{1}]}\;v_{M}^{2})$.  $T=L$ cannot occur because $L$ occurs only in $^{L}HS\;e_{S}$.  $T=T_{1}^{a}$ cannot occur because $T_{1}^{a}$ occurs only in $^{T_{1}^{a}}HS\;e_{S}$.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ for some $e_{M}^{2}$ then $^{T}HS\;e_{M}^{1}\rightarrow\,^{T}HS\;e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} for some \emph{string} then $^{T}HS\;e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.
 \end{case}
 \begin{case}
 $e_{H}=\,^{T}HS\;e_{S}^{1}$
